# strum

./: README.md  README.rst  pyproject.toml
strum/: main.py
tests/: test_strum.py
